# rust-athena

./: .env  .env.swp  Cargo.toml  README.md  docker-compose.yml
char/: Cargo.toml
char/src/: lib.rs
core/: Cargo.toml
core/src/: main.rs
core/src/char_server/: mod.rs
core/src/common/: context.rs  mod.rs
core/src/login_server/: mod.rs
db/: Cargo.toml
db/migrations/2022-04-09-114552_create_users/: up.sql
db/src/: lib.rs  models.rs
db/src/db/: schema.rs
src/: main.rs
src/char_server/: mod.rs
src/common/: mod.rs  packets.rs
src/login_server/: mod.rs
